# AI-specification-generator

./: .env.example  .gitignore  CLAUDE.md  README.md  TASK.md  TEST.md  TODO-1.md  TODO-2.md  TODO-3.md  TODO-performance-results.md  TODO.md  pyproject.toml  test-spec-performance.md  test-spec.md
PRPs/: TASK.md  fix-json-serialization-error.md  fix-langchain-deprecation-warnings.md  improve-specification-quality.md  performance-optimization-and-quality-improvements.md  semantic-diff-new-file-handling.md  simplified-japanese-template.md  specification-generator-fixes.md  timeout-fixes-and-testing-requirements.md  tree-sitter-parser-fixes.md
TODO/: fix-update-command.md
examples/: diff_detector.py  specification_generator.py
examples/treesitter/: treesitter_rs.py
samples/: test_generation.md  test_sample.json  test_sample.md  test_sample.py
samples/C/: calculator.c
samples/CPlusPlus/: calculator.cpp  calculator_spec.md
samples/Java/: Calculator.java  Calculator_spec.md
samples/JavaScript/: calculator.js  calculator_spec.md
samples/Python/: test_sample.py  test_sample_spec.md  test_sample_spec_new.md
samples/TypeScript/: calculator.ts  calculator_spec.md
scripts/: __init__.py  install_tree_sitter.py  run_tests.py
spec-updates/: updated_specification_1752681347.md  updated_specification_1752681539.md
src/spec_generator/: __init__.py  cli.py  config.py  models.py
src/spec_generator/core/: __init__.py  analysis_processor.py  diff_detector.py  generator.py  llm_provider.py  processor.py  updater.py
src/spec_generator/parsers/: __init__.py  ast_analyzer.py  base.py  tree_sitter_parser.py
src/spec_generator/parsers/languages/: __init__.py  c.py  cpp.py  java.py  javascript.py  python.py
src/spec_generator/templates/: __init__.py  document_sections.py  japanese_spec.py  prompts.py  specification.py  table_formatters.py
src/spec_generator/utils/: __init__.py  common.py  file_utils.py  git_utils.py  performance_monitor.py  simple_memory.py
tests/: __init__.py  test_class_structure_recognition.py  test_cli.py  test_common.py  test_config.py  test_diff_detector.py  test_gemini_integration.py  test_generator.py  test_integration.py  test_models.py  test_performance_optimization.py  test_processor.py  test_simple_memory.py  test_table_formatting.py  test_tree_sitter_parser.py  test_updater.py
tests/fixtures/sample_code/: sample.js  sample.py
